--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -33,6 +33,18 @@
           Reading time ~{% if readtime <= 1 %}1 minute{% else %}{{ readtime }} minutes{% endif %}
         </p><!-- /.entry-reading-time -->
         {% endif %}
+
+        <!-- Look the author details up from the site config. -->
+        {% assign author = site.data.authors[page.author] %}
+
+        <!-- Output author details if some exist. -->
+        {% if author %}
+        <p>
+          <!-- Personal Info. -->
+          Written by {{ author.name }}
+        </p>
+        {% endif %}
+
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
