--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -52,6 +52,16 @@
       <footer class="entry-meta">
         {% if page.modified %}{{ page.title }} was last modified on <span class="entry-date date modified"><time datetime="{{ page.modified }}">{{ page.modified }}</time></span>
         <span class="author vcard fn">{{ site.owner.name }}</span>{% endif %}
+        <!-- Look the author details up from the site config. -->
+        {% assign author = site.data.authors[page.author] %}
+
+        <!-- Output author details if some exist. -->
+        {% if author %}
+        <span class="author vcard fn">
+          <!-- Personal Info. -->
+          Written by {{ author.name }}
+        </span>
+        {% endif %}
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
     </div><!-- /.entry-content -->
