fixed unwanted text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@
         <span class="author vcard"><span class="fn"><a href="{{ site.url }}/about/" title="About {{ site.owner.name }}">{{ site.owner.name }}</a></span></span>
         {% if page.share != false %}{% include social-share.html %}{% endif %}
       </footer>
--+-*-+-9*+-9*/9-/986+98*//////98/////////////////////////9    </div><!-- /.entry-content -->
+    </div><!-- /.entry-content -->
     {% if page.comments != false %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
     {% if site.related_posts.size %}{% include read-more.html %}{% endif %}
   </article>
