--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,2 @@
 <span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }}. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</span>
+<span><a href="https://www.kontext-e.de/Impressum/">Impressum</a> | <a href="https://www.kontext-e.de/Datenschutz/">Datenschutz</a></span>
